# tcp-to-aedat4-converter

./: ARCHITECTURE.md  CMakeLists.txt  README.md
include/: config.hpp  frame_unpacker.hpp  tcp_receiver.hpp
src/: main.cpp  tcp_receiver.cpp
test/: fake_camera.py  fake_camera_udp_fast.py
